--- a/TVShows/TVShows/Login/Login.storyboard
+++ b/TVShows/TVShows/Login/Login.storyboard
@@ -29,7 +29,7 @@
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Gp-2O-xMD" userLabel="Top view spacing">
                                                         <rect key="frame" x="0.0" y="0.0" width="374" height="70"/>
-                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="70" id="lyM-IN-CnA"/>
                                                         </constraints>
@@ -57,6 +57,7 @@
                                                                 </constraints>
                                                             </view>
                                                         </subviews>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstItem="zeZ-PF-Mc8" firstAttribute="width" secondItem="vtS-gz-Utt" secondAttribute="width" id="8TN-tS-Gqx"/>
                                                             <constraint firstItem="zeZ-PF-Mc8" firstAttribute="width" secondItem="iDW-1J-pep" secondAttribute="width" id="uQN-E2-kHB"/>
@@ -106,6 +107,7 @@
                                                                 </constraints>
                                                             </view>
                                                         </subviews>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="40" id="ub8-hd-oon"/>
                                                         </constraints>
@@ -134,11 +136,12 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                         </subviews>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstItem="eVY-8j-b8g" firstAttribute="leading" secondItem="Elj-WW-Y5e" secondAttribute="leading" constant="30" id="vHn-FH-qJA"/>
                                                         </constraints>
                                                     </stackView>
-                                                    <button opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="374" placeholderIntrinsicHeight="50" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kBB-cb-aTq">
+                                                    <button opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="374" placeholderIntrinsicHeight="50" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kBB-cb-aTq" customClass="TKTransitionSubmitButton" customModule="TVShows" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="425" width="374" height="55"/>
                                                         <color key="backgroundColor" red="1" green="0.45882352941176469" blue="0.5490196078431373" alpha="1" colorSpace="calibratedRGB"/>
                                                         <constraints>
@@ -155,6 +158,7 @@
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WCJ-rd-dcJ">
                                                         <rect key="frame" x="0.0" y="514" width="374" height="20"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="20" id="Q1s-fH-Evs"/>
                                                         </constraints>
@@ -164,6 +168,7 @@
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d7k-Zw-zca">
                                                         <rect key="frame" x="0.0" y="568" width="374" height="25"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="25" id="Esh-0i-pXl"/>
                                                         </constraints>
@@ -175,20 +180,20 @@
                                                     </button>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tPy-nn-9uR" userLabel="Bottom view spacing">
                                                         <rect key="frame" x="0.0" y="627" width="374" height="70"/>
-                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="70" id="1kC-W2-TMG"/>
                                                         </constraints>
                                                     </view>
                                                 </subviews>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="750" id="95w-ot-bZY"/>
                                                     <constraint firstItem="v1X-dV-cvA" firstAttribute="width" secondItem="iDW-1J-pep" secondAttribute="width" id="a6p-tm-9x2"/>
                                                 </constraints>
                                             </stackView>
                                         </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="kcZ-8g-Vpv" firstAttribute="top" secondItem="XZx-Oe-uSb" secondAttribute="top" id="0q7-Yy-IhS"/>
                                             <constraint firstItem="kcZ-8g-Vpv" firstAttribute="leading" secondItem="XZx-Oe-uSb" secondAttribute="leading" constant="20" id="iua-2m-cVY"/>
@@ -197,6 +202,7 @@
                                         </constraints>
                                     </view>
                                 </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="XZx-Oe-uSb" secondAttribute="trailing" id="3xY-Ln-2ox"/>
                                     <constraint firstItem="XZx-Oe-uSb" firstAttribute="width" secondItem="Vw9-da-8h4" secondAttribute="width" id="M2s-ch-cL2"/>
