--- a/TVShows/TVShows/Comments/Comments.storyboard
+++ b/TVShows/TVShows/Comments/Comments.storyboard
@@ -19,24 +19,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SGp-9r-FVr">
-                                <rect key="frame" x="6" y="19" width="408" height="877"/>
+                                <rect key="frame" x="0.0" y="38" width="414" height="824"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="p8I-OT-HzC">
-                                        <rect key="frame" x="0.0" y="0.0" width="408" height="877"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="p8I-OT-HzC">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="824"/>
                                         <subviews>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sH2-G9-RBZ">
-                                                <rect key="frame" x="0.0" y="0.0" width="408" height="537"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="790"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommentsTableCell" rowHeight="93" id="ExD-wO-VQA" customClass="CommentsTableCell" customModule="TVShows" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="28" width="408" height="93"/>
+                                                        <rect key="frame" x="0.0" y="28" width="414" height="93"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ExD-wO-VQA" id="KBG-Gk-jxX">
-                                                            <rect key="frame" x="0.0" y="0.0" width="408" height="92.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="414" height="92.5"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="QIc-0c-ydI">
-                                                                    <rect key="frame" x="20" y="5" width="368" height="82.5"/>
+                                                                    <rect key="frame" x="20" y="5" width="374" height="82.5"/>
                                                                     <subviews>
                                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gC4-gV-Zpx">
                                                                             <rect key="frame" x="0.0" y="0.0" width="80" height="82.5"/>
@@ -46,17 +46,17 @@
                                                                             </constraints>
                                                                         </imageView>
                                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="QYB-th-6U0">
-                                                                            <rect key="frame" x="100" y="0.0" width="268" height="82.5"/>
+                                                                            <rect key="frame" x="100" y="0.0" width="274" height="82.5"/>
                                                                             <subviews>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bKK-rT-Eoh">
-                                                                                    <rect key="frame" x="0.0" y="0.0" width="268" height="20.5"/>
+                                                                                    <rect key="frame" x="0.0" y="0.0" width="274" height="20.5"/>
                                                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                                     <color key="textColor" red="1" green="0.45882352939999999" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
                                                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EXZ-vK-AgQ">
-                                                                                    <rect key="frame" x="0.0" y="20.5" width="268" height="62"/>
+                                                                                    <rect key="frame" x="0.0" y="20.5" width="274" height="62"/>
                                                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                     <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
@@ -92,10 +92,10 @@
                                                 </connections>
                                             </tableView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tq9-53-W83">
-                                                <rect key="frame" x="0.0" y="557" width="408" height="30"/>
+                                                <rect key="frame" x="0.0" y="794" width="414" height="30"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Input comment..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2jA-0a-yqH">
-                                                        <rect key="frame" x="0.0" y="0.0" width="358" height="30"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="364" height="30"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <color key="tintColor" white="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="textColor"/>
@@ -103,7 +103,7 @@
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4B6-k1-0pk">
-                                                        <rect key="frame" x="368" y="0.0" width="40" height="30"/>
+                                                        <rect key="frame" x="374" y="0.0" width="40" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="40" id="fqq-Jw-M3q"/>
                                                         </constraints>
@@ -119,22 +119,18 @@
                                                     <constraint firstAttribute="trailing" secondItem="4B6-k1-0pk" secondAttribute="trailing" id="r1g-bT-PPo"/>
                                                 </constraints>
                                             </stackView>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cil-3E-QDp">
-                                                <rect key="frame" x="0.0" y="607" width="408" height="270"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="270" id="mVA-wx-0fZ"/>
-                                                </constraints>
-                                            </view>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="tq9-53-W83" secondAttribute="bottom" id="ODt-ym-08V"/>
+                                        </constraints>
                                     </stackView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="p8I-OT-HzC" firstAttribute="leading" secondItem="SGp-9r-FVr" secondAttribute="leading" id="KOX-af-9IE"/>
-                                    <constraint firstItem="p8I-OT-HzC" firstAttribute="top" secondItem="SGp-9r-FVr" secondAttribute="top" id="kOV-7Q-4gk"/>
-                                    <constraint firstAttribute="trailing" secondItem="p8I-OT-HzC" secondAttribute="trailing" id="pvk-pf-h2J"/>
-                                    <constraint firstAttribute="bottom" secondItem="p8I-OT-HzC" secondAttribute="bottom" id="wH4-cM-eXH"/>
+                                    <constraint firstAttribute="bottom" secondItem="p8I-OT-HzC" secondAttribute="bottom" id="UHL-Hi-Po5"/>
+                                    <constraint firstAttribute="trailing" secondItem="p8I-OT-HzC" secondAttribute="trailing" id="lHm-hn-Mal"/>
+                                    <constraint firstItem="p8I-OT-HzC" firstAttribute="top" secondItem="SGp-9r-FVr" secondAttribute="top" id="wKP-OP-xjn"/>
+                                    <constraint firstItem="p8I-OT-HzC" firstAttribute="leading" secondItem="SGp-9r-FVr" secondAttribute="leading" id="yxf-DL-4JQ"/>
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img-placehoder-comments" translatesAutoresizingMaskIntoConstraints="NO" id="pSx-O1-cSF">
@@ -156,15 +152,15 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Foi-pg-0Hn" firstAttribute="trailing" secondItem="bIO-Pz-CeR" secondAttribute="trailing" constant="65" id="6Oh-hk-Vff"/>
-                            <constraint firstItem="SGp-9r-FVr" firstAttribute="leading" secondItem="Foi-pg-0Hn" secondAttribute="leading" constant="6" id="896-a7-e36"/>
-                            <constraint firstItem="Foi-pg-0Hn" firstAttribute="trailing" secondItem="SGp-9r-FVr" secondAttribute="trailing" id="M1K-ME-H6b"/>
-                            <constraint firstItem="bIO-Pz-CeR" firstAttribute="leading" secondItem="Foi-pg-0Hn" secondAttribute="leading" constant="65" id="NeM-QA-vdO"/>
+                            <constraint firstItem="SGp-9r-FVr" firstAttribute="bottom" secondItem="Foi-pg-0Hn" secondAttribute="bottom" id="0P3-C2-X1u"/>
+                            <constraint firstItem="SGp-9r-FVr" firstAttribute="trailing" secondItem="Foi-pg-0Hn" secondAttribute="trailing" id="6bo-IP-DFV"/>
+                            <constraint firstItem="bIO-Pz-CeR" firstAttribute="leading" secondItem="Foi-pg-0Hn" secondAttribute="leading" priority="999" constant="65" id="NeM-QA-vdO"/>
                             <constraint firstItem="pSx-O1-cSF" firstAttribute="top" secondItem="Foi-pg-0Hn" secondAttribute="top" constant="100" id="Qzg-jW-oAj"/>
-                            <constraint firstItem="Foi-pg-0Hn" firstAttribute="top" secondItem="SGp-9r-FVr" secondAttribute="top" constant="69" id="RNw-ej-Ddd"/>
                             <constraint firstItem="bIO-Pz-CeR" firstAttribute="top" secondItem="pSx-O1-cSF" secondAttribute="bottom" constant="20" id="UJz-b2-t1x"/>
-                            <constraint firstAttribute="bottom" secondItem="SGp-9r-FVr" secondAttribute="bottom" id="W5P-mi-fgK"/>
+                            <constraint firstItem="SGp-9r-FVr" firstAttribute="leading" secondItem="Foi-pg-0Hn" secondAttribute="leading" id="nUU-tK-PBk"/>
                             <constraint firstItem="pSx-O1-cSF" firstAttribute="centerX" secondItem="YWQ-g9-Ria" secondAttribute="centerX" id="vZe-tr-WrE"/>
+                            <constraint firstItem="Foi-pg-0Hn" firstAttribute="trailing" secondItem="bIO-Pz-CeR" secondAttribute="trailing" priority="999" constant="65" id="y8e-sd-9I1"/>
+                            <constraint firstItem="SGp-9r-FVr" firstAttribute="top" secondItem="YWQ-g9-Ria" secondAttribute="top" constant="38" id="zhF-nC-oIl"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Foi-pg-0Hn"/>
                     </view>
@@ -173,7 +169,7 @@
                         <outlet property="commentInput" destination="2jA-0a-yqH" id="Up4-Hz-sF5"/>
                         <outlet property="contentView" destination="SGp-9r-FVr" id="gdC-Uk-q0w"/>
                         <outlet property="imagePlaceholderComments" destination="pSx-O1-cSF" id="ByS-nH-i5A"/>
-                        <outlet property="keyboardPlaceholder" destination="Cil-3E-QDp" id="H3N-MS-yaS"/>
+                        <outlet property="inputBottomConstraint" destination="ODt-ym-08V" id="1ru-qO-hjt"/>
                         <outlet property="tableView" destination="sH2-G9-RBZ" id="kjb-pl-9HD"/>
                         <outlet property="textPlaceholderComments" destination="bIO-Pz-CeR" id="zzR-Kz-buI"/>
                     </connections>
