--- a/TVShows/TVShows/Episode details/EpisodeDetails.storyboard
+++ b/TVShows/TVShows/Episode details/EpisodeDetails.storyboard
@@ -139,7 +139,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EOO-w7-dfQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-486.95652173913049" y="-276.5625"/>
+            <point key="canvasLocation" x="-832" y="-317"/>
         </scene>
     </scenes>
     <resources>
