--- a/TVShows/TVShows/Comments/Comments.storyboard
+++ b/TVShows/TVShows/Comments/Comments.storyboard
@@ -22,10 +22,10 @@
                                 <rect key="frame" x="0.0" y="38" width="414" height="824"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="p8I-OT-HzC">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="824"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="814"/>
                                         <subviews>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sH2-G9-RBZ">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="789"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="779"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommentsTableCell" rowHeight="93" id="ExD-wO-VQA" customClass="CommentsTableCell" customModule="TVShows" customModuleProvider="target">
@@ -92,11 +92,11 @@
                                                 </connections>
                                             </tableView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tq9-53-W83">
-                                                <rect key="frame" x="0.0" y="794" width="414" height="30"/>
+                                                <rect key="frame" x="0.0" y="784" width="414" height="30"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Input comment..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2jA-0a-yqH">
                                                         <rect key="frame" x="0.0" y="0.0" width="364" height="30"/>
-                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                         <color key="tintColor" white="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -104,6 +104,7 @@
                                                     </textField>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4B6-k1-0pk">
                                                         <rect key="frame" x="374" y="0.0" width="40" height="30"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="40" id="fqq-Jw-M3q"/>
                                                         </constraints>
@@ -115,23 +116,25 @@
                                                         </connections>
                                                     </button>
                                                 </subviews>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="trailing" secondItem="4B6-k1-0pk" secondAttribute="trailing" id="r1g-bT-PPo"/>
                                                 </constraints>
                                             </stackView>
                                         </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </stackView>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="p8I-OT-HzC" secondAttribute="bottom" id="UHL-Hi-Po5"/>
+                                    <constraint firstAttribute="bottom" secondItem="p8I-OT-HzC" secondAttribute="bottom" constant="10" id="UHL-Hi-Po5"/>
                                     <constraint firstAttribute="trailing" secondItem="p8I-OT-HzC" secondAttribute="trailing" id="lHm-hn-Mal"/>
                                     <constraint firstItem="p8I-OT-HzC" firstAttribute="top" secondItem="SGp-9r-FVr" secondAttribute="top" id="wKP-OP-xjn"/>
                                     <constraint firstItem="p8I-OT-HzC" firstAttribute="leading" secondItem="SGp-9r-FVr" secondAttribute="leading" id="yxf-DL-4JQ"/>
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img-placehoder-comments" translatesAutoresizingMaskIntoConstraints="NO" id="pSx-O1-cSF">
-                                <rect key="frame" x="126.99999999999999" y="188" width="160.00000000000003" height="160"/>
+                                <rect key="frame" x="127" y="188" width="160" height="160"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="160" id="Fz1-YX-xgp"/>
                                     <constraint firstAttribute="height" constant="160" id="Q3Q-Cd-2Da"/>
@@ -163,10 +166,10 @@
                     </view>
                     <navigationItem key="navigationItem" title="Comments" id="HAt-zL-gP7"/>
                     <connections>
+                        <outlet property="bottomConstraint" destination="UHL-Hi-Po5" id="0Bu-l8-Vjf"/>
                         <outlet property="commentInput" destination="2jA-0a-yqH" id="Up4-Hz-sF5"/>
                         <outlet property="contentView" destination="SGp-9r-FVr" id="gdC-Uk-q0w"/>
                         <outlet property="imagePlaceholderComments" destination="pSx-O1-cSF" id="ByS-nH-i5A"/>
-                        <outlet property="inputBottomConstraint" destination="UHL-Hi-Po5" id="0Bu-l8-Vjf"/>
                         <outlet property="tableView" destination="sH2-G9-RBZ" id="kjb-pl-9HD"/>
                         <outlet property="textPlaceholderComments" destination="bIO-Pz-CeR" id="zzR-Kz-buI"/>
                     </connections>
@@ -183,6 +186,13 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="OgL-il-wqb">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
