--- a/TVShows/AddNewEpisode.storyboard
+++ b/TVShows/AddNewEpisode.storyboard
@@ -43,7 +43,7 @@
                                                                     <constraint firstAttribute="height" constant="100" id="K3D-3y-wMg"/>
                                                                 </constraints>
                                                                 <state key="normal" title="Upload photo">
-                                                                    <color key="titleColor" red="1" green="0.45882352939999999" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
+                                                                    <color key="titleColor" red="0.98958015441894531" green="0.45922058820724487" blue="0.54899066686630249" alpha="1" colorSpace="calibratedRGB"/>
                                                                 </state>
                                                                 <connections>
                                                                     <action selector="uploadPhotoActionHandler" destination="fSv-9D-vHR" eventType="touchUpInside" id="XTA-8u-EWQ"/>
