--- a/TVShows/TVShows/Show details/ShowDetails.storyboard
+++ b/TVShows/TVShows/Show details/ShowDetails.storyboard
@@ -61,7 +61,9 @@
                                                                 <constraint firstAttribute="height" constant="25" id="ZV4-it-UPE"/>
                                                                 <constraint firstAttribute="width" constant="25" id="m54-vj-HUP"/>
                                                             </constraints>
-                                                            <state key="normal" title="Button" image="ic-thumbs-up"/>
+                                                            <state key="normal" title="Button" image="ic-thumbs-up">
+                                                                <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            </state>
                                                             <connections>
                                                                 <action selector="postLike" destination="JsY-I2-wvw" eventType="touchUpInside" id="b6e-AD-48g"/>
                                                             </connections>
@@ -85,7 +87,7 @@
                                                     </subviews>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </stackView>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="KKv-MX-ym0">
+                                                <textView clipsSubviews="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KKv-MX-ym0">
                                                     <rect key="frame" x="0.0" y="390" width="414" height="120"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
