--- a/TVShows/TVShows/Home/CollectionViewHome.storyboard
+++ b/TVShows/TVShows/Home/CollectionViewHome.storyboard
@@ -21,8 +21,8 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cTx-uM-dIN">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="dob-0U-4ei">
-                                    <size key="itemSize" width="157" height="248"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="TJO-Lb-EMd">
+                                    <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -86,14 +86,14 @@
                                         </connections>
                                     </collectionViewCell>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TvShowsGridCollectionCell" id="htG-bM-nsg" customClass="TvShowsGridCollectionCell" customModule="TVShows" customModuleProvider="target">
-                                        <rect key="frame" x="128.5" y="143" width="157" height="248"/>
+                                        <rect key="frame" x="122.5" y="143" width="169" height="251"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="157" height="248"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="169" height="251"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1uY-bv-xdr">
-                                                    <rect key="frame" x="18" y="62" width="121" height="168"/>
+                                                    <rect key="frame" x="18" y="62" width="133" height="171"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </imageView>
                                             </subviews>
@@ -105,6 +105,7 @@
                                             <constraint firstItem="1uY-bv-xdr" firstAttribute="top" secondItem="htG-bM-nsg" secondAttribute="topMargin" constant="10" id="Dhx-if-Xy9"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="1uY-bv-xdr" secondAttribute="trailing" constant="10" id="T5s-yH-272"/>
                                         </constraints>
+                                        <size key="customSize" width="169" height="251"/>
                                         <connections>
                                             <outlet property="thumbnail" destination="1uY-bv-xdr" id="LFz-fP-NQ2"/>
                                         </connections>
@@ -134,7 +135,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jDM-Rg-Mva" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1807.2463768115942" y="-153.34821428571428"/>
+            <point key="canvasLocation" x="-2357.971014492754" y="-228.34821428571428"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2Bu-3Q-8DA">
